# QPolargraph

./: .gitignore  CHANGELOG.rst  CITATION.cff  CLAUDE.md  FlashFirmware.py  Motors.py  PolarScan.py  Polargraph.py  PolargraphWidget.ui  QMotors.py  QPolargraph.py  QPolargraphWidget.py  QRasterScanWidget.py  QScanPattern.py  QScanPatternWidget.py  QScanner.py  README.md  RasterScan.py  RasterScanWidget.ui  Scanner.ui  TODO.md  __init__.py  __main__.py  fake.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: tests.yml
arduino/: acam3.ino
arduino/acam3/: acam3.ino
docs/: conf.py  hardware.rst  index.rst  installation.rst  quickstart.rst  tarzan_scan_analysis.tex
docs/api/: flash_firmware.rst  index.rst  motors.rst  polar_scan.rst  polargraph.rst  polargraph_widget.rst  raster_scan.rst  scan_pattern.rst  scan_pattern_widget.rst  scanner.rst  tarzan_scan.rst
hardware/: Motors.py  Polargraph.py  PolargraphWidget.ui  QPolargraphWidget.py  fake.py
hardware/arduino/acam3/: acam3.ino
patterns/: PolarScan.py  QScanPattern.py  QScanPatternWidget.py  RasterScan.py  RasterScanWidget.ui  TarzanScan.py  TarzanScanWidget.py  TarzanScanWidget.ui
tests/: conftest.py  test_motors.py  test_polargraph.py  test_polargraph_widget.py  test_scan_pattern.py  test_scan_pattern_widget.py  test_scanner.py
