[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QPolargraph"
version = "1.1.3"
description = "Qt-based interface for a two-dimensional polargraph scanner"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "David G. Grier", email = "david.grier@nyu.edu" },
]
keywords = ["polargraph", "scanner", "stepper motor", "Arduino", "Qt", "scientific instrument"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "qtpy>=2.0",
    "pyqtgraph>=0.13",
    "parse>=1.19",
    "QInstrument>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autodoc-typehints>=2.0",
]

[project.gui-scripts]
qpolargraph = "QPolargraph.QScanner:QScanner.example"
qpolargraph-flash = "QPolargraph.FlashFirmware:main"

[project.urls]
Homepage = "https://github.com/davidgrier/QPolargraph"
Repository = "https://github.com/davidgrier/QPolargraph"
Documentation = "https://qpolargraph.readthedocs.io"
"Issue Tracker" = "https://github.com/davidgrier/QPolargraph/issues"

# The project root IS the QPolargraph package — no src/ subdirectory.
[tool.setuptools]
package-dir = {"QPolargraph" = "."}
packages = [
    "QPolargraph",
    "QPolargraph.hardware",
    "QPolargraph.patterns",
]

[tool.setuptools.package-data]
"QPolargraph" = ["**/*.ui", "**/*.png"]
"QPolargraph.hardware" = ["arduino/**/*.ino"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.exclude-package-data]
"QPolargraph" = [".qp/**", "tests/**", "docs/**"]
